# suffix-tree

./: .gitignore  .travis.yml  LICENSE  README.md  SuffixStructures.cabal  SuffixTree.cabal  cartesian-tree.hs  create_dot_file.hs  create_dot_file_final.hs  ctree.hs  fusedctree.hs  graph.dot  kasai.py  stack.hs  stree.hs  suffixArray.hs  suffixTree.hs  test-suffix.hs
SuffixStructures/: CTree.hs  FusedCTree.hs  SuffixArray.hs  SuffixTree.hs
Tests/: test-suffix.hs
suffix-tree/suffix-tree/: main.cpp  suffix-tree.cpp  suffix-tree.h  suffix_tree.1
suffix-tree/suffix-tree.xcodeproj/: project.pbxproj
