Name:		   SuffixStructures
Version:	   1.0.3
Synopsis:      Suffix tree and suffix array
Description:   Suffix tree and suffix array
Category:      Data Structures
Cabal-Version: >= 1.6
License:	   BSD3
License-File:  LICENSE
Stability:	Experimental
Author:		Brett Wines
Maintainer: bgwines@cs.stanford.edu
Homepage:	https://github.com/bgwines/suffix-tree
Build-Type: Simple
Source-Repository head
    type:     git
    location: git://github.com/bgwines/suffix-tree.git

Library
  Build-Depends:
    Zora,
    base,
    containers,
    array,
    text,
    bytestring

  Exposed-Modules:
    SuffixStructures.SuffixTree
    SuffixStructures.SuffixArray
    SuffixStructures.CTree
    SuffixStructures.FusedCTree